--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,47 @@
+
+
+
 html, body {
     margin: 0px;
     height: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .custom-nav {
     background-color: #0B0C10;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+.custom-nav-font {
+    color: #66FCF1;
+    font-size: 1.6rem;
+    padding-left: 30px;
 }
 
 .top-container {
-    background-color: #AFD3E2;
+    background-color: white;
     width: 100%;
-    height: auto;
+    height: 50%;
+    text-align: center;
 }
 
 .mid-container {
-    background-color: white;
+    background-color: #1F2833;
+    color: #66FCF1;
     width: 100%;
-    height: auto;
+    height: 50%;
+    text-align: center;
 }
 
 .btm-container {
-    background-color: #AFD3E2;
+    background-color: white;
     width: 100%;
-    height: auto;
+    height: 50%;
+    text-align: center;
 }
 
 footer {
     background-color: #0B0C10;
-    position: absolute;
     width: 100%;
     height: 100px;
     bottom: 0px;
