--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
-
-
-
 html, body {
     margin: 0px;
     height: 100%;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 .custom-nav {
@@ -23,6 +20,7 @@ html, body {
     width: 100%;
     height: 50%;
     text-align: center;
+    padding-top: 50px;
 }
 
 .mid-container {
@@ -31,6 +29,7 @@ html, body {
     width: 100%;
     height: 50%;
     text-align: center;
+    padding-top: 50px
 }
 
 .btm-container {
@@ -38,6 +37,7 @@ html, body {
     width: 100%;
     height: 50%;
     text-align: center;
+    padding-top: 50px
 }
 
 footer {
