--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,18 @@
 html, body {
-    margin: 0px;
     height: 100%;
     font-family: 'Oswald', sans-serif;
 }
 
 p {
     margin-bottom: 0;
+}
+
+li p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 .big-img {
@@ -52,7 +59,7 @@ p {
 .btm-container {
     background-color: white;
     width: 100%;
-    height: 50%;
+    min-height: 150px;
     text-align: center;
     padding-top: 50px
 }
