--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ html, body {
     font-family: 'Oswald', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #66FCF1;
+}
+
 p {
     margin-bottom: 0;
 }
@@ -13,6 +18,19 @@ li p {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+}
+
+footer p {
+    color: #66FCF1;  
+}
+
+.footer-img {
+    
+    color: #66FCF1;  
+}
+
+.ft-icon {
+    padding: 40px 5px 5px 10px;
 }
 
 .custom-img {
@@ -62,7 +80,10 @@ li p {
 
 footer {
     background-color: #0B0C10;
+    font-size: 15px;
     width: 100%;
     height: 100px;
     bottom: 0px;
+    text-align: center;
+    min-height: 150px;
 }
